--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body                /* importar tipografia desde Google fonts   */
     width: 80px;
     object-fit: cover;
 }
- 
+ .carousel-item
 .navbar,
 .nav-link,
 .navbar-brand{
@@ -351,7 +351,7 @@ body                /* importar tipografia desde Google fonts   */
 footer
     {
        background-color: #bbb5a8;
-       height: 150px;
+       height: auto;
        text-align: center;        
        
     }
@@ -560,8 +560,8 @@ footer h3, h4
 
     .navbar-brand img
     {
-        height: 25px;
-        width: 25px;
+        height: 35px;
+        width: 35px;
         object-fit: cover;
     }
     .navbar-toggler
@@ -575,13 +575,13 @@ footer h3, h4
      
         height: auto;
     }
-    .hero h2 { font-size:small; }
+    .hero h2 { font-size:x-small; }
     .productos h2  { font-size:small; }
     .hero p
     {
         width: 100%;
         text-align: center;
-        font-size:x-small;
+        font-size:xx-small;
     }
 
     .productos p
@@ -590,12 +590,24 @@ footer h3, h4
         text-align: center;
         font-size:xx-small !important;
     }
+
+    .servicios h2  { font-size:small; }
+    .servicios-p1  { font-size:x-small;}
+    .servicios-p2  { font-size:x-small; }       
+
+    .contacto h2  { font-size:small; }
+    .contacto h3  { font-size:x-small; }
+    
+    .nosotros h2  { font-size:small; }
+    .nosotros h3  { font-size:x-small; }
+
+    .footrt {height: auto;}
     .redes
     {
         width: 40%;
         height: auto;
     }
-
+    .redes h4 {font-size: x-small;}
 }
  
     /** Aqui las mosificaciones a la clase del carousel de Bootstrap*/
