--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* ------------------------reset-------------------------------------  */
+
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
 * {
   padding: 0;
@@ -10,453 +11,16 @@
   /* setea ta,año del elemento*/ }
 
 body {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: #60350a;
-  background-color: rgba(211, 193, 175, 0.775); }
-
-.navbar {
-  /*background-color:#bbb5a8d6 !important;*/
-  background-color: rgba(96, 53, 10, 0.587);
-  color: #60350a !important;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between !important;
-  align-items: center !important;
-  position: relative; }
-
-.navbar-brand img {
-  margin: 10px;
-  height: 80px;
-  width: 80px;
-  object-fit: cover; }
-
-.navbar-toggler {
-  /* tuve q usar position para ponerlo a la derecha*/
-  position: absolute;
-  right: 20px;
-  top: 25px; }
-
-.dropdown-menu {
-  background-color: #bbb5a8 !important; }
-
-.container-fluid {
-  width: fit-content !important; }
-
-.hero {
-  width: 100%;
-  /* Ocupa todo el ancho de la pantalla*/
-  height: auto;
-  /** Ajusta el tamaño del main a la cantidad de fotos        */
-  color: #60350a;
-  background-color: rgba(211, 193, 175, 0.775);
-  background-image: linear-gradient(rgba(197, 187, 171, 0.699), rgba(208, 210, 175, 0.727)), url("../img/Background-image-index.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-h1 {
-  color: #60350a;
-  text-align: center;
-  font-size: xx-large; }
-
-p {
-  text-align: center;
-  height: auto;
-  color: #60350a;
-  font-size: large; }
-
-/** Aqui las mosificaciones a la clase del carousel de Bootstrap*/
-.carousel-item {
-  /* Este es el espacio de la imagen del carousel*/
-  height: 300px;
-  margin: 10px; }
-
-.carousel-item img {
-  /* Este es el espacio de la imagen del carousel*/
-  height: 100%;
-  width: 80%;
-  object-fit: cover; }
-
-.carousel-item p {
-  /* leyenda del carousel caption*/
-  text-align: left;
-  color: black;
-  background-color: rgba(255, 255, 255, 0.522);
-  width: fit-content;
-  padding: 2px; }
-
-.carousel-item a {
-  /* leyenda del carousel button*/
-  text-decoration: none; }
-
-.carousel-item h3 {
-  /* texto del boton sobre el carousel*/
-  text-align: left;
-  margin: 5px;
-  padding: 5px;
-  border-radius: 5%;
-  color: white;
-  background-color: rgba(96, 53, 10, 0.587);
-  width: fit-content; }
-
-.productos-main {
-  background-color: rgba(211, 193, 175, 0.775);
-  color: #60350a;
-  width: 100%;
-  /* Ocupa todo el ancho de la pantalla*/
-  height: auto;
-  /** Ajusta el tamaño del main a la cantidad de fotos        */
-  text-align: center;
-  background-image: linear-gradient(rgba(197, 187, 171, 0.699), rgba(208, 210, 175, 0.727)), url("../img/Background-image-index.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-.productos h1 {
-  text-align: center;
-  font-size: xx-large; }
-
-.productos p {
-  text-align: center;
-  font-size: x-large; }
-
-.tarjetas-de-producto {
-  width: 100%;
-  height: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: 360px;
-  justify-items: center; }
-
-.tarjetas-de-producto div {
-  height: 300px;
-  width: 270px;
-  background-color: #bbb5a8;
-  border-style: solid;
-  border-color: #bbb5a8;
-  position: relative; }
-
-.tarjetas-de-producto img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; }
-
-.tarjetas-de-producto a {
-  background-color: #593e03;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-  font-size: small;
-  /* border-style: solid; */
-  width: 100%;
-  position: absolute;
-  bottom: 35px;
-  left: 0px; }
-
-.tarjetas-de-producto h3 {
-  background-color: #bbb5a843;
-  text-align: center;
-  font-size: large;
-  color: #60350a;
-  width: 100%;
-  padding: 0px;
-  margin-bottom: 5%;
-  position: absolute;
-  bottom: 0px; }
-
-.servicios {
-  width: 100%;
-  /* Ocupa todo el ancho de la pantalla*/
-  height: auto;
-  /** deja lugar para una foto*/
-  padding-bottom: 10px;
-  background-color: rgba(211, 193, 175, 0.775);
-  color: #60350a;
-  text-align: center;
-  background-image: linear-gradient(rgba(197, 187, 171, 0.699), rgba(208, 210, 175, 0.727)), url("../img/Background-image-index.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-h1 {
-  font-size: xx-large; }
-
-.servicios-p1 {
-  font-size: x-large; }
-
-.servicios-p2 {
-  font-size: medium; }
-
-.tarjetas-de-servicio {
-  /* En esta seccion implementamos GRIDS*/
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 240px;
-  justify-items: center;
-  /* centra dentro del grid*/
-  background-color: rgba(211, 193, 175, 0.775);
-  background-image: linear-gradient(rgba(197, 187, 171, 0.699), rgba(208, 210, 175, 0.727)), url("../img/Background-image-index.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-.div-servicio {
-  width: 250px;
-  height: 250px;
-  border-style: solid black 2px;
-  background-color: chocolate;
-  color: white;
-  position: relative; }
-
-.div-servicio img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; }
-
-.div-servicio h4 {
-  font-size: medium;
-  color: chocolate;
-  position: absolute;
-  bottom: 35px;
-  left: 25%; }
-
-.div-servicio a {
-  font-size: small;
-  text-decoration: none;
-  background-color: chocolate;
-  color: white;
-  position: absolute;
-  bottom: 15px;
-  left: 0%; }
-
-.contacto {
-  width: 100%;
-  /* Ocupa todo el ancho de la pantalla*/
-  height: 300px;
-  /** deja lugar para una foto*/
-  align-content: top;
-  /* Los elementos arrancan desde arriba */
-  background-color: rgba(211, 193, 175, 0.775);
-  color: #60350a;
-  background-image: linear-gradient(rgba(197, 187, 171, 0.699), rgba(208, 210, 175, 0.727)), url("../img/Background-image-index.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-h1 {
-  text-align: center;
-  font-size: xx-large;
-  /*background-color: #bbb5a8;*/ }
-
-h3 {
-  font-size: medium;
-  text-align: center;
-  border-bottom: 1px;
-  border-color: white; }
-
-form {
-  text-align: center; }
-
-div input, textarea {
-  background-color: transparent;
-  width: 100%;
-  text-align: center;
-  border-style: hidden;
-  border-bottom: 2px;
-  border-width: 1px; }
-
-button {
-  background-color: #bbb5a8;
-  text-align: center;
-  font-size: medium;
-  color: #60350a;
-  text-decoration: none;
-  font-size: small;
-  border-style: solid;
-  padding: 2px;
-  margin: 2px; }
-
-footer {
-  background-color: rgba(96, 53, 10, 0.587);
-  color: #60350a;
-  height: auto;
-  text-align: center; }
-
-h3,
-h4 {
-  color: #60350a;
-  text-align: center;
-  font-size: medium; }
-
-.redes {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: small; }
-
-.redes div a {
-  width: 100%;
-  text-decoration: none; }
-
-.GridRedes {
-  color: #60350a;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  /* no lleva commas entre los numeros!!!!!*/
-  /*   grid-template-rows:repeat(4);*/
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  grid-template-areas: "fb fbt " "x xt" "insta instat" "tik tikt"; }
-
-.icono-fb {
-  grid-area: fb;
-  text-align: right;
-  font-size: small; }
-
-.texto-fb {
-  grid-area: fbt;
-  text-align: left; }
-
-.texto-fb a {
-  text-decoration: none;
-  color: #60350a; }
-  .texto-fb a:hover {
-    font-size: medium; }
-
-.icono-x {
-  grid-area: x;
-  text-align: right; }
-
-.texto-x {
-  grid-area: xt;
-  text-align: left; }
-
-.texto-x a {
-  text-decoration: none;
-  color: #60350a; }
-  .texto-x a:hover {
-    font-size: medium; }
-
-.icono-instagram {
-  grid-area: insta;
-  text-align: right; }
-
-.texto-instagram {
-  grid-area: instat;
-  text-align: left; }
-
-.texto-instagram a {
-  text-decoration: none;
-  color: #60350a; }
-  .texto-instagram a:hover {
-    font-size: medium; }
-
-.icono-tiktok {
-  grid-area: tik;
-  text-align: right; }
-
-.texto-tiktok {
-  grid-area: tikt;
-  text-align: left; }
-
-.texto-tiktok a {
-  text-decoration: none;
-  color: #60350a; }
-  .texto-tiktok a:hover {
-    font-size: medium; }
-
-.contactenos {
-  position: fixed;
-  /* Ubica al fondo a la derecha */
-  bottom: 10px;
-  right: 20px;
-  text-align: center;
-  font-size: 15px; }
-
-img {
-  height: 30px;
-  width: 30px; }
-
-.nosotros {
-  width: 100%;
-  /* Ocupa todo el ancho de la pantalla*/
-  height: 300px;
-  /** deja lugar para una foto*/
-  text-align: center;
-  background-color: rgba(211, 193, 175, 0.775);
-  color: #60350a;
-  background-image: linear-gradient(rgba(197, 187, 171, 0.699), rgba(208, 210, 175, 0.727)), url("../img/Background-image-index.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-h2, p {
-  text-align: center;
-  font-size: xx-large; }
-
-p {
-  font-size: medium; }
-
-@media screen and (max-width: 880px) {
-  .tarjetas-de-producto {
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 360px;
-    height: 1100px; }
-  .tar-prod-5 {
-    grid-column: span none; } }
-
-@media screen and (max-width: 590px) {
-  .tarjetas-de-producto {
-    grid-template-columns: 1fr;
-    grid-auto-rows: 360px;
-    height: auto; }
-  .tar-prod-5 {
-    grid-column: span none; }
-  .navbar-brand img {
-    height: 35px;
-    width: 35px;
-    object-fit: cover; }
-  .navbar-toggler {
-    /* tuve q usar position para ponerlo a la derecha*/
-    right: 20px;
-    top: 15px; }
-  .hero {
-    /* achica para comprimir el parrafo */
-    height: auto; }
-  .hero h2 {
-    font-size: x-small; }
-  .productos h2 {
-    font-size: small; }
-  .hero p {
-    width: 100%;
-    text-align: center;
-    font-size: xx-small; }
-  .productos p {
-    width: 100%;
-    text-align: center;
-    font-size: xx-small !important; }
-  .servicios h2 {
-    font-size: small; }
-  .servicios-p1 {
-    font-size: x-small; }
-  .servicios-p2 {
-    font-size: x-small; }
-  .contacto h2 {
-    font-size: small; }
-  .contacto h3 {
-    font-size: x-small; }
-  .nosotros h2 {
-    font-size: small; }
-  .nosotros h3 {
-    font-size: x-small; }
-  .footrt {
-    height: auto; }
-  .redes {
-    width: 40%;
-    height: auto; }
-  .redes h4 {
-    font-size: x-small; } }
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
 
 /*
-
+@import "./base/mediaquerys";
+@import "./components/header";
+@import "./components/hero";
+@import "./components/productos";
+@import "./components/servicios";
+@import "./components/nosotros";
+@import "./components/contacto";
 @import "./components/main";
-
+@import "./components/footer";
 */
