--- a/scss/components/_servicios.scss
+++ b/scss/components/_servicios.scss
@@ -72,6 +72,7 @@
         }
 .div-servicio a
         {
+        width: 100%;
         font-size: small;
         text-decoration: none;
         background-color: chocolate;
